# aviutl-ColorVisionSimulation

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CREDITS.md  README.md  pack.cmake
lib/: CMakeLists.txt  cl_manager.cpp  cl_manager.h  color.h  cvs_cl.cpp  cvs_cl.h  cvs_cpu.cpp  cvs_cpu.h  cvs_params.cpp  cvs_params.h  kernel.cl  macro.h  main.cpp  util.cpp  util.h
script/: CMakeLists.txt  script.cmake  色覚シミュレーションKR.anm.in
test/: CMakeLists.txt  test_cvs.cpp  test_kernel.cpp
